res/css/views/rooms/_EventBubbleTile.scss
/* ... */
.mx_EventTile.mx_EventTile_noBubble[data-layout=bubble] {
    --backgroundColor: transparent;

    .mx_EventTile_line.mx_EventTile_emote {
        padding-right: 60px; // align with bubbles text
        font-style: italic;

        > a { // timestamp anchor wrapper
            align-self: center;
            bottom: unset;
            top: unset;
            font-style: normal; // undo italic above
        }

        .mx_MEmoteBody {
            padding: 4px 0;
        }
    }
}

.mx_EventTile.mx_EventTile_bubbleContainer[data-layout=bubble],
.mx_EventTile.mx_EventTile_leftAlignedBubble[data-layout=bubble] {
    .mx_EventTile_line > a {
        // hide this timestamp as the tile will render its own
        display: none;
    }
}

.mx_EventTile.mx_EventTile_bubbleContainer[data-layout=bubble],
.mx_EventTile.mx_EventTile_leftAlignedBubble[data-layout=bubble],
.mx_EventTile.mx_EventTile_info[data-layout=bubble],
.mx_GenericEventListSummary[data-layout=bubble][data-expanded=false] {
    --backgroundColor: transparent;
    --gutterSize: 0;

    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 5px 0;

    .mx_EventTile_avatar {
        position: static;
        order: -1;
        margin-right: 5px;
    }

    .mx_EventTile_line,
    .mx_EventTile_info {
        min-width: 100%;
        // Preserve alignment with left edge of text in bubbles
        margin: 0;
    }

    .mx_EventTile_e2eIcon {
        margin-left: 9px;
    }

    .mx_EventTile_line {
        > a, // timestamp wrapper anchor
        .mx_MessageActionBar + .mx_MessageTimestamp {
            right: auto;
            left: -77px;
            bottom: unset;
            align-self: center;

            .mx_MessageTimestamp, &.mx_MessageTimestamp {
                vertical-align: middle;
            }
        }
    }
}

.mx_GenericEventListSummary[data-layout=bubble] {
    --maxWidth: 70%;
    margin-left: calc(var(--avatarSize) + var(--gutterSize));

    .mx_GenericEventListSummary_toggle {
        margin: 0 55px 0 5px;
        float: none;

        &[aria-expanded=false] {
            order: 9;
        }
        &[aria-expanded=true] {
            text-align: right;
        }
    }

    .mx_GenericEventListSummary_line {
        display: none;
    }

    .mx_GenericEventListSummary_avatars {
        padding-top: 0;
    }

    &::after {
        content: "";
        clear: both;
    }
}

.mx_GenericEventListSummary[data-expanded=false][data-layout=bubble] {
    // Align with left edge of bubble tiles
    padding: 0 49px;
}

// ideally we'd use display=contents here for the layout to all work regardless of the *ELS but
// that breaks ScrollPanel's reliance upon offsetTop so we have to have a bit more finesse.
.mx_GenericEventListSummary[data-expanded=true][data-layout=bubble] {
    display: flex;
    flex-direction: column;
    margin: 0;

    .mx_EventTile_info {
        padding: 2px 0;
        margin-right: 0;

        .mx_MessageActionBar {
            right: 127px; // align with that of right-column bubbles
        }

        .mx_EventTile_readAvatars {
            right: -18px; // match alignment to RRs of chat bubbles
        }

        &::before {
            right: 0; // match alignment of the hover background to that of chat bubbles
        }
    }
}

// increase margin between ELS and the next Event to not have our user avatar overlap the expand/collapse button
.mx_GenericEventListSummary[data-layout=bubble][data-expanded=false] + .mx_EventTile[data-layout=bubble][data-self=true] {
    margin-top: 20px;
}

/* events that do not require bubble layout */
.mx_GenericEventListSummary[data-layout=bubble],
.mx_EventTile.mx_EventTile_bad[data-layout=bubble] {
    .mx_EventTile_line {
        background: transparent;
    }

    &:hover {
        &::before {
            background: transparent;
        }
    }
}

.mx_EventTile_tileError[data-layout=bubble] .mx_EventTile_line {
    flex-direction: column; // restore the centering
}

